# nebulaDuel

./: .gitignore  LICENSE  README.md  RUNNING_LOCALLY.md  package-lock.json  package.json
Dynamic_NFT/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  status.json
Dynamic_NFT/.openzeppelin/: polygon-mumbai.json  unknown-11155111.json  unknown-31337.json
Dynamic_NFT/scripts/: test.ts  (+3 more)
app/: Cargo.toml  Dockerfile  fly.toml  package-lock.json  package.json  server_interact.exp
app/.cargo/: config.toml
app/demo/: .dockerignore
app/nebulaTests/: battle_challenge.js  game_characters.js  index.js  marketplace.js  players_profile.js  strategy_simulation.js
app/scripts/: 1Create_profile.exp  2join_duel.exp  default.sh
app/src/: AI_battles.js  advance_router.rs  battle_challenge.js  fight_simulation.js  game_characters.js  index.js  inspect_router.rs  lib.rs  main.rs  marketplace.js  players_profile.js  router.rs  strategy.js  strategy_dummy.js  strategy_simulation.js  structures.rs
app/src/admin_functions/: mod.rs
app/src/ai_battle/: mod.rs
app/src/battle_challenge/: mod.rs
app/src/game_characters/: mod.rs
app/src/market_place/: mod.rs
app/src/players_profile/: mod.rs
app/src/storage/: mod.rs
app/src/strategy_simulation/: mod.rs
app/utils/: contract.json
backend_server/: README.md  fly.toml  package-lock.json  package.json
frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json
new_frontend/: index.html  tailwind.config.js
relayer/: .dockerignore  .gitignore  Dockerfile  package.json  sample.env
(+269 files in other folders)
