[package]
name = "dapp"
version = "0.1.0"
edition = "2021"

[dependencies]
json = "0.12"
hyper = { version = "0.14", features = ["http1", "runtime", "client"] }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
hex = { version = "^0.4.3" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
url = "2.2"
ethabi = "18.0.0" # Check for the latest version
uint = "0.9.5"
